[package]
name = "nftblockd"
version = "1.6.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
ureq = "3.2.0"
log = "0.4.29"
ipnetwork = { version = "0.21.1", features = ["default"] }
thiserror = "2.0.18"
nftables = "0.6.3"
serde_json = "1.0.149"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
rand = "0.10.0"
nftnl = "0.9.1"
